1998-12-16  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* util.c util.h (argstostr): removed (args_to_string is
	duplicate), changed callers.
	(args_to_string): fixed bug which placed all args at beginning of
	string.
	
1998-10-19  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* display.h, options.op, list.c (list_full),
	status.c (opt_set_status): removed opt_emacs_status.

	* status.c (status_do): handle short status line (space < 0).

1998-10-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* bindings.desc: added mkdir, site.

	* util.h, util.c (args_to_string): new function.

	* ftp.h, ftp.c (ftp_site): new function.

	* fntable.fn, fn_basic.c (fn_site): new function.

1998-10-07  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_stor): accept response 125.

1998-10-07  Wiz  <wiz@danbala.tuwien.ac.at>

	* fn_select.c (fn_reload): reload logically current dir, not
	physically current.

	* bindings.desc, fn_basic.c (fn_showname): new option -l: show
	link target.

	* readdir.c (parse_unix): better parsing of symbolic links (Windows).

	* display.c: removed include for termcap.h

	* main.c (main): if startdir is file, download.

1998-05-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fputchar.c (fputchar): return a value.

	* main.c, tty.h, display.h, fn_tag.c, tag.h: cleanup for -Wall.

1998-05-01  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* directory.c, tty.h: cleanup for -Wall.

1998-04-30  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* signals.c: cleanup for -Wall

	* util.c (parse_url, deurl, hexdigit): moved from main.c

1998-04-25  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* fn_basic.c (fn_mkdir): new function.

	* ftp.c (ftp_mkdir): new funktion.

1998-03-12  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_cwd, ftp_pwd): handle DOS servers with leading '\\'
	in directory names.

1998-03-02  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_cat): new parameter start.  callers changed.
